# shark-species-classifier

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  shark-classifier-pytorch copy.ipynb  sharks.dvc
configs/: config.yaml
configs/model/: cnn.yaml  resnet34.yaml
configs/optimizer/: adamw.yaml
configs/trainer/: default.yaml
shark_species_classifier/: commands.py  data.py  lightning_module.py  models.py  utils.py
